tests/snapshots/harness_mux_snapshots__fork_associated_session_and_unresolved_lineage.snap
---
source: tests/harness_mux_snapshots.rs
assertion_line: 251
expression: normalized
---
{
  "nodes": [
    {
      "type": "repo",
      "id": {
        "common_dir": "/sources/repo-a"
      },
      "common_dir": "/sources/repo-a"
    },
    {
      "type": "repo",
      "id": {
        "common_dir": "/fixture/repo-a/.git"
      },
      "common_dir": "/fixture/repo-a/.git",
      "source_paths": [
        "/fixture/repo-a"
      ]
    },
    {
      "type": "checkout",
      "id": {
        "repo": {
          "common_dir": "/sources/repo-a"
        },
        "root": ".atelier/forks/alpha/repo-a"
      },
      "root": ".atelier/forks/alpha/repo-a",
      "current_branch": {
        "repo": {
          "common_dir": "/sources/repo-a"
        },
        "refname": "fork/alpha/repo-a"
      }
    },
    {
      "type": "checkout",
      "id": {
        "repo": {
          "common_dir": "/fixture/repo-a/.git"
        },
        "root": "/fixture/repo-a"
      },
      "root": "/fixture/repo-a",
      "git_dir": "/fixture/repo-a/.git",
      "current_branch": {
        "repo": {
          "common_dir": "/fixture/repo-a/.git"
        },
        "refname": "refs/heads/main"
      }
    },
    {
      "type": "workspace",
      "id": {
        "root": "/fixture"
      },
      "root": "/fixture",
      "provider": "atelier",
      "name": "atelier-demo"
    },
    {
      "type": "agent_session",
      "id": {
        "harness_key": "codex",
        "state_scope": "/fixture/.state/codex",
        "session_key": "session-x"
      },
      "harness_key": "codex",
      "cwd": "/fixture/.atelier/forks/alpha/repo-a",
      "last_active_epoch": 1700000000
    },
    {
      "type": "branch",
      "id": {
        "repo": {
          "common_dir": "/sources/repo-a"
        },
        "refname": "fork/alpha/repo-a"
      },
      "refname": "fork/alpha/repo-a"
    },
    {
      "type": "branch",
      "id": {
        "repo": {
          "common_dir": "/fixture/repo-a/.git"
        },
        "refname": "refs/heads/main"
      },
      "refname": "refs/heads/main"
    },
    {
      "type": "fork",
      "id": {
        "provider_source_key": "atelier:alpha"
      },
      "provider": "atelier",
      "provider_source_key": "alpha",
      "name": "alpha",
      "scope": "workspace",
      "capabilities": [
        "mode:worktree",
        "state:isolated"
      ]
    }
  ],
  "candidate_links": [
    {
      "id": "atelier:fork:atelier:alpha:child_session:codex:child-session",
      "source": {
        "type": "fork",
        "provider_source_key": "atelier:alpha"
      },
      "target": {
        "kind": "unresolved",
        "evidence": {
          "node_type": "agent_session",
          "harness_key": "codex",
          "native_id": "child-session",
          "path": "/fixture/.atelier/forks/alpha",
          "metadata": {
            "created_epoch": 1,
            "fork_mode": "worktree",
            "fork_name": "alpha",
            "harness_key": "codex",
            "lineage_fidelity": "native",
            "lineage_kind": "fork"
          }
        }
      },
      "relation": "child_session",
      "provenance": "strong_discovered",
      "confidence": "high",
      "freshness": "fresh",
      "source_metadata": {
        "adapter": "atelier",
        "evidence": "fork harness child session",
        "fields": {
          "created_epoch": 1,
          "fork_mode": "worktree",
          "fork_name": "alpha",
          "harness_key": "codex",
          "lineage_fidelity": "native",
          "lineage_kind": "fork"
        }
      },
      "state": {
        "state": "active"
      }
    },
    {
      "id": "atelier:fork:atelier:alpha:created_branch:branch:repo:/sources/repo-a@fork/alpha/repo-a",
      "source": {
        "type": "fork",
        "provider_source_key": "atelier:alpha"
      },
      "target": {
        "kind": "node",
        "id": {
          "type": "branch",
          "repo": {
            "common_dir": "/sources/repo-a"
          },
          "refname": "fork/alpha/repo-a"
        }
      },
      "relation": "created_branch",
      "provenance": "strong_discovered",
      "confidence": "high",
      "freshness": "fresh",
      "source_metadata": {
        "adapter": "atelier",
        "evidence": "fork branch metadata",
        "fields": {
          "created_epoch": 1,
          "fork_mode": "worktree",
          "fork_name": "alpha",
          "forked": true,
          "link": false,
          "repo_name": "repo-a"
        }
      },
      "state": {
        "state": "active"
      }
    },
    {
      "id": "atelier:fork:atelier:alpha:created_checkout:checkout:repo:/sources/repo-a@.atelier/forks/alpha/repo-a",
      "source": {
        "type": "fork",
        "provider_source_key": "atelier:alpha"
      },
      "target": {
        "kind": "node",
        "id": {
          "type": "checkout",
          "repo": {
            "common_dir": "/sources/repo-a"
          },
          "root": ".atelier/forks/alpha/repo-a"
        }
      },
      "relation": "created_checkout",
      "provenance": "strong_discovered",
      "confidence": "high",
      "freshness": "fresh",
      "source_metadata": {
        "adapter": "atelier",
        "evidence": "fork created checkout",
        "fields": {
          "created_epoch": 1,
          "fork_mode": "worktree",
          "fork_name": "alpha",
          "forked": true,
          "link": false,
          "repo_name": "repo-a"
        }
      },
      "state": {
        "state": "active"
      }
    },
    {
      "id": "atelier:fork:atelier:alpha:forks_repo:repo:/sources/repo-a",
      "source": {
        "type": "fork",
        "provider_source_key": "atelier:alpha"
      },
      "target": {
        "kind": "node",
        "id": {
          "type": "repo",
          "common_dir": "/sources/repo-a"
        }
      },
      "relation": "forks_repo",
      "provenance": "strong_discovered",
      "confidence": "high",
      "freshness": "fresh",
      "source_metadata": {
        "adapter": "atelier",
        "evidence": "fork repo membership",
        "fields": {
          "created_epoch": 1,
          "fork_mode": "worktree",
          "fork_name": "alpha",
          "forked": true,
          "link": false,
          "repo_name": "repo-a"
        }
      },
      "state": {
        "state": "active"
      }
    },
    {
      "id": "atelier:fork:atelier:alpha:forks_workspace:workspace:/fixture",
      "source": {
        "type": "fork",
        "provider_source_key": "atelier:alpha"
      },
      "target": {
        "kind": "node",
        "id": {
          "type": "workspace",
          "root": "/fixture"
        }
      },
      "relation": "forks_workspace",
      "provenance": "strong_discovered",
      "confidence": "high",
      "freshness": "fresh",
      "source_metadata": {
        "adapter": "atelier",
        "evidence": "fork belongs to Atelier workspace",
        "fields": {
          "created_epoch": 1,
          "fork_mode": "worktree",
          "fork_name": "alpha"
        }
      },
      "state": {
        "state": "active"
      }
    },
    {
      "id": "atelier:fork:atelier:alpha:parent_session:codex:parent-session",
      "source": {
        "type": "fork",
        "provider_source_key": "atelier:alpha"
      },
      "target": {
        "kind": "unresolved",
        "evidence": {
          "node_type": "agent_session",
          "harness_key": "codex",
          "native_id": "parent-session",
          "path": "/fixture/.atelier/forks/alpha",
          "metadata": {
            "created_epoch": 1,
            "fork_mode": "worktree",
            "fork_name": "alpha",
            "harness_key": "codex",
            "lineage_fidelity": "native",
            "lineage_kind": "fork"
          }
        }
      },
      "relation": "parent_session",
      "provenance": "strong_discovered",
      "confidence": "high",
      "freshness": "fresh",
      "source_metadata": {
        "adapter": "atelier",
        "evidence": "fork harness parent session",
        "fields": {
          "created_epoch": 1,
          "fork_mode": "worktree",
          "fork_name": "alpha",
          "harness_key": "codex",
          "lineage_fidelity": "native",
          "lineage_kind": "fork"
        }
      },
      "state": {
        "state": "active"
      }
    },
    {
      "id": "atelier:fork:atelier:alpha:rooted_at_path:/fixture/.atelier/forks/alpha",
      "source": {
        "type": "fork",
        "provider_source_key": "atelier:alpha"
      },
      "target": {
        "kind": "unresolved",
        "evidence": {
          "node_type": "path",
          "path": "/fixture/.atelier/forks/alpha",
          "metadata": {
            "created_epoch": 1,
            "fork_mode": "worktree",
            "fork_name": "alpha"
          }
        }
      },
      "relation": "rooted_at_path",
      "provenance": "strong_discovered",
      "confidence": "high",
      "freshness": "fresh",
      "source_metadata": {
        "adapter": "atelier",
        "evidence": "fork root path",
        "fields": {
          "created_epoch": 1,
          "fork_mode": "worktree",
          "fork_name": "alpha"
        }
      },
      "state": {
        "state": "active"
      }
    },
    {
      "id": "atelier:workspace:/fixture:workspace_contains_repo:repo:/fixture/repo-a/.git:repo-a",
      "source": {
        "type": "workspace",
        "root": "/fixture"
      },
      "target": {
        "kind": "node",
        "id": {
          "type": "repo",
          "common_dir": "/fixture/repo-a/.git"
        }
      },
      "relation": "workspace_contains_repo",
      "provenance": "strong_discovered",
      "confidence": "high",
      "freshness": "fresh",
      "source_metadata": {
        "adapter": "atelier",
        "evidence": "atelier.toml repo entry",
        "fields": {
          "canonical_checkout_root": "/fixture/repo-a",
          "logical_path": "/fixture/repo-a",
          "member_path_kind": "directory",
          "provider_source_path": "/sources/repo-a",
          "repo_name": "repo-a"
        }
      },
      "state": {
        "state": "active"
      }
    },
    {
      "id": "cross_link:agent_session:codex:/fixture/.state/codex:session-x:associated_with:fork:atelier:alpha",
      "source": {
        "type": "agent_session",
        "harness_key": "codex",
        "state_scope": "/fixture/.state/codex",
        "session_key": "session-x"
      },
      "target": {
        "kind": "node",
        "id": {
          "type": "fork",
          "provider_source_key": "atelier:alpha"
        }
      },
      "relation": "associated_with",
      "provenance": "discovered",
      "confidence": "medium",
      "freshness": "fresh",
      "source_metadata": {
        "adapter": "cross_link",
        "evidence": "session cwd within fork root",
        "fields": {
          "fork_root": "/fixture/.atelier/forks/alpha"
        }
      },
      "state": {
        "state": "active"
      }
    },
    {
      "id": "cross_link:agent_session:codex:/fixture/.state/codex:session-x:associated_with:workspace:/fixture:cwd_within_workspace",
      "source": {
        "type": "agent_session",
        "harness_key": "codex",
        "state_scope": "/fixture/.state/codex",
        "session_key": "session-x"
      },
      "target": {
        "kind": "node",
        "id": {
          "type": "workspace",
          "root": "/fixture"
        }
      },
      "relation": "associated_with",
      "provenance": "discovered",
      "confidence": "high",
      "freshness": "fresh",
      "source_metadata": {
        "adapter": "cross_link",
        "evidence": "session cwd within workspace member",
        "fields": {
          "workspace_member_root": "/fixture"
        }
      },
      "state": {
        "state": "active"
      }
    },
    {
      "id": "git:checkout:repo:/fixture/repo-a/.git@/fixture/repo-a:belongs_to_repo:repo:/fixture/repo-a/.git",
      "source": {
        "type": "checkout",
        "repo": {
          "common_dir": "/fixture/repo-a/.git"
        },
        "root": "/fixture/repo-a"
      },
      "target": {
        "kind": "node",
        "id": {
          "type": "repo",
          "common_dir": "/fixture/repo-a/.git"
        }
      },
      "relation": "belongs_to_repo",
      "provenance": "strong_discovered",
      "confidence": "high",
      "freshness": "fresh",
      "source_metadata": {
        "adapter": "git",
        "evidence": "git common dir"
      },
      "state": {
        "state": "active"
      }
    },
    {
      "id": "git:checkout:repo:/fixture/repo-a/.git@/fixture/repo-a:checked_out_branch:branch:repo:/fixture/repo-a/.git@refs/heads/main",
      "source": {
        "type": "checkout",
        "repo": {
          "common_dir": "/fixture/repo-a/.git"
        },
        "root": "/fixture/repo-a"
      },
      "target": {
        "kind": "node",
        "id": {
          "type": "branch",
          "repo": {
            "common_dir": "/fixture/repo-a/.git"
          },
          "refname": "refs/heads/main"
        }
      },
      "relation": "checked_out_branch",
      "provenance": "strong_discovered",
      "confidence": "high",
      "freshness": "fresh",
      "source_metadata": {
        "adapter": "git",
        "evidence": "symbolic HEAD"
      },
      "state": {
        "state": "active"
      }
    }
  ],
  "resolved_relationships": [
    {
      "source": {
        "type": "checkout",
        "repo": {
          "common_dir": "/fixture/repo-a/.git"
        },
        "root": "/fixture/repo-a"
      },
      "target": {
        "type": "repo",
        "common_dir": "/fixture/repo-a/.git"
      },
      "relation": "belongs_to_repo",
      "selected_link_id": "git:checkout:repo:/fixture/repo-a/.git@/fixture/repo-a:belongs_to_repo:repo:/fixture/repo-a/.git"
    },
    {
      "source": {
        "type": "checkout",
        "repo": {
          "common_dir": "/fixture/repo-a/.git"
        },
        "root": "/fixture/repo-a"
      },
      "target": {
        "type": "branch",
        "repo": {
          "common_dir": "/fixture/repo-a/.git"
        },
        "refname": "refs/heads/main"
      },
      "relation": "checked_out_branch",
      "selected_link_id": "git:checkout:repo:/fixture/repo-a/.git@/fixture/repo-a:checked_out_branch:branch:repo:/fixture/repo-a/.git@refs/heads/main"
    },
    {
      "source": {
        "type": "workspace",
        "root": "/fixture"
      },
      "target": {
        "type": "repo",
        "common_dir": "/fixture/repo-a/.git"
      },
      "relation": "workspace_contains_repo",
      "selected_link_id": "atelier:workspace:/fixture:workspace_contains_repo:repo:/fixture/repo-a/.git:repo-a"
    },
    {
      "source": {
        "type": "agent_session",
        "harness_key": "codex",
        "state_scope": "/fixture/.state/codex",
        "session_key": "session-x"
      },
      "target": {
        "type": "workspace",
        "root": "/fixture"
      },
      "relation": "associated_with",
      "selected_link_id": "cross_link:agent_session:codex:/fixture/.state/codex:session-x:associated_with:workspace:/fixture:cwd_within_workspace"
    },
    {
      "source": {
        "type": "agent_session",
        "harness_key": "codex",
        "state_scope": "/fixture/.state/codex",
        "session_key": "session-x"
      },
      "target": {
        "type": "fork",
        "provider_source_key": "atelier:alpha"
      },
      "relation": "associated_with",
      "selected_link_id": "cross_link:agent_session:codex:/fixture/.state/codex:session-x:associated_with:fork:atelier:alpha"
    },
    {
      "source": {
        "type": "fork",
        "provider_source_key": "atelier:alpha"
      },
      "target": {
        "type": "repo",
        "common_dir": "/sources/repo-a"
      },
      "relation": "forks_repo",
      "selected_link_id": "atelier:fork:atelier:alpha:forks_repo:repo:/sources/repo-a"
    },
    {
      "source": {
        "type": "fork",
        "provider_source_key": "atelier:alpha"
      },
      "target": {
        "type": "checkout",
        "repo": {
          "common_dir": "/sources/repo-a"
        },
        "root": ".atelier/forks/alpha/repo-a"
      },
      "relation": "created_checkout",
      "selected_link_id": "atelier:fork:atelier:alpha:created_checkout:checkout:repo:/sources/repo-a@.atelier/forks/alpha/repo-a"
    },
    {
      "source": {
        "type": "fork",
        "provider_source_key": "atelier:alpha"
      },
      "target": {
        "type": "workspace",
        "root": "/fixture"
      },
      "relation": "forks_workspace",
      "selected_link_id": "atelier:fork:atelier:alpha:forks_workspace:workspace:/fixture"
    },
    {
      "source": {
        "type": "fork",
        "provider_source_key": "atelier:alpha"
      },
      "target": {
        "type": "branch",
        "repo": {
          "common_dir": "/sources/repo-a"
        },
        "refname": "fork/alpha/repo-a"
      },
      "relation": "created_branch",
      "selected_link_id": "atelier:fork:atelier:alpha:created_branch:branch:repo:/sources/repo-a@fork/alpha/repo-a"
    }
  ],
  "diagnostics": [
    {
      "kind": "unresolved_endpoint",
      "link_id": "atelier:fork:atelier:alpha:child_session:codex:child-session",
      "relation": "child_session"
    },
    {
      "kind": "unresolved_endpoint",
      "link_id": "atelier:fork:atelier:alpha:parent_session:codex:parent-session",
      "relation": "parent_session"
    },
    {
      "kind": "unresolved_endpoint",
      "link_id": "atelier:fork:atelier:alpha:rooted_at_path:/fixture/.atelier/forks/alpha",
      "relation": "rooted_at_path"
    }
  ]
}
