tests/snapshots/harness_mux_snapshots__orphan_harness_session.snap
---
source: tests/harness_mux_snapshots.rs
expression: normalized
---
{
  "nodes": [
    {
      "type": "agent_session",
      "id": {
        "harness_key": "codex",
        "state_scope": "/fixture/.state/codex",
        "session_key": "orphan-session"
      },
      "harness_key": "codex",
      "last_active_epoch": 1700000000
    }
  ],
  "candidate_links": [],
  "resolved_relationships": [],
  "diagnostics": []
}
