tests/snapshots/harness_mux_snapshots__unavailable_tmux_yields_no_mux_nodes.snap
---
source: tests/harness_mux_snapshots.rs
expression: normalized
---
{
  "nodes": [],
  "candidate_links": [],
  "resolved_relationships": [],
  "diagnostics": []
}
